# simple-compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
include/: ast.h  lexer.h  parser.h
src/: driver.cpp
test/: CMakeLists.txt
